# offline_data_automation

./: .env  .gitignore  README.md  check_db.py  downloaded_metadata.json  main.py  pyproject.toml
output/: charge_data_01-Feb-2026.xlsx  charge_data_02-Feb-2026.xlsx  charge_data_06-Jan-2026.xlsx  charge_data_07-Jan-2026.xlsx  charge_data_24-Mar-2026.xlsx  combined_dpr_data.xlsx  combined_hot_data.xlsx  combined_rm_hm_data.xlsx  rm_processed_data.xlsx  rm_stock_output.xlsx
outputs/: charge_data_08-Jan-2026.xlsx  charge_data_10-Jan-2026.xlsx  charge_data_13-Jan-2026.xlsx  charge_data_19-Jan-2026.xlsx  charge_data_21-Jan-2026.xlsx  charge_data_23-Jan-2026.xlsx  charge_data_27-Jan-2026.xlsx
src/: app.py
src/config/: base.yaml  charge.yaml  dpr.yaml  fines_analysis.yaml  hot_metal.yaml  rm.yaml  rm_hm.yaml  rm_stock.yaml
src/core/: config_loader.py  logging.py
src/domains/charge/: config_updater.py  hopper_repository.py  processor.py  reader.py  service.py
src/domains/download/: service.py
src/domains/dpr/: config_updater.py  reader.py  service.py
src/domains/fines_analysis/: reader.py  service.py  transformer.py
src/domains/hot_metal/: config_updater.py  reader.py  service.py
src/domains/postgresql/charge/: hopper_repository.py  processor.py  reader.py  service.py
src/domains/rm/: neon_mapper.py  reader.py  service.py  transformer.py
src/domains/rm_hm/: service.py
src/domains/rm_stock/: processor.py  reader.py  service.py
src/infrastructure/: influx_client.py  neon_client.py  postgresql_client.py  selenium_client.py
(+5 files in other folders)
