[project]
name = "offline-data-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "influxdb-client>=1.49.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]
